src/main/webapp/css/app.css
/* app css stylesheet */
@import 'https://fonts.googleapis.com/css?family=Roboto';

body, html {
	height: 100%;
    overflow: hidden;
	width: 100%;
	font-family: 'Roboto', sans-serif;
}

.ng-cloak {
	display: none !important;
}

.phones {
	list-style: none;
}

.thumb {
	float: left;
	margin: -1em 1em 1.5em 0em;
	padding-bottom: 1em;
	height: 100px;
	width: 100px;
}

.phones li {
	clear: both;
	height: 100px;
	padding-top: 15px;
}

/** Detail View **/
img.phone {
	float: left;
	border: 1px solid black;
	margin-right: 3em;
	margin-bottom: 2em;
	background-color: white;
	padding: 2em;
	height: 400px;
	width: 400px;
}

ul.phone-thumbs {
	margin: 0;
	list-style: none;
}

ul.phone-thumbs li {
	border: 1px solid black;
	display: inline-block;
	margin: 1em;
	background-color: white;
}

ul.phone-thumbs img {
	height: 100px;
	width: 100px;
	padding: 1em;
}

ul.phone-thumbs img:hover {
	cursor: pointer;
}


ul.specs {
	clear: both;
	margin: 0;
	padding: 0;
	list-style: none;
}

ul.specs > li{
	display: inline-block;
	width: 200px;
	vertical-align: top;
}

ul.specs > li > span{
	font-weight: bold;
	font-size: 1.2em;
}

ul.specs dt {
	font-weight: bold;
}

h1 {
	border-bottom: 1px solid gray;
}

.loader{
	margin-top: 2%;
	height: 100px;
	width: 20%;
	text-align: center;
	padding: 1em;
	display: inline-block;
	vertical-align: top;
}

/*
  Set the color of the icon
*/
svg path,
svg rect{
	fill: #FF6700;
}
/*--------------------- CSS FOR LOADING SCREEN BEGIN -------------------*/
.loading-screen {
	text-align: center;
	background-color: #2c2d31;
	height: 100%;
	width: 100%;
	display: table;
	position: absolute;
	z-index: 4;
	-webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
	-moz-animation: fadein 0.5s; /* Firefox < 16 */
	-ms-animation: fadein 0.5s; /* Internet Explorer */
	-o-animation: fadein 0.5s; /* Opera < 12.1 */
	animation: fadein 0.5s;
}
.loading-content {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}
.loading-text {
	font-size: 4em;
	color: white;
	margin-top: 2%;
}
.display-none {
	display: none;
}

@keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}
/*-------------------------- CSS FOR LOADING SCREEN END -------------*/
/*-------------------------- CSS FOR LOADING ICON BEGIN -------------*/
#loading-wrapper {
	position: fixed;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
}

#loading-text {
	display: block;
	position: absolute;
	top: 50%;
	left: 50%;
	color: #999;
	width: 100px;
	height: 30px;
	margin: -7px 0 0 -45px;
	text-align: center;
	font-family: 'PT Sans Narrow', sans-serif;
	font-size: 20px;
}

#loading-content {
	display: block;
	position: relative;
	left: 50%;
	top: 50%;
	width: 170px;
	height: 170px;
	margin: -85px 0 0 -85px;
	border: 3px solid #F00;
}

#loading-content:after {
	content: "";
	position: absolute;
	border: 3px solid #0F0;
	left: 15px;
	right: 15px;
	top: 15px;
	bottom: 15px;
}

#loading-content:before {
	content: "";
	position: absolute;
	border: 3px solid #00F;
	left: 5px;
	right: 5px;
	top: 5px;
	bottom: 5px;
}

#loading-content {
	border: 3px solid transparent;
	border-top-color: white;
	border-bottom-color: white;
	border-radius: 50%;
	-webkit-animation: loader 2s linear infinite;
	-moz-animation: loader 2s linear infinite;
	-o-animation: loader 2s linear infinite;
	animation: loader 2s linear infinite;
}

#loading-content:before {
	border: 3px solid transparent;
	border-top-color: white;
	border-bottom-color: white;
	border-radius: 50%;
	-webkit-animation: loader 3s linear infinite;
	-moz-animation: loader 2s linear infinite;
	-o-animation: loader 2s linear infinite;
	animation: loader 3s linear infinite;
}

#loading-content:after {
	border: 3px solid transparent;
	border-top-color: white;
	border-bottom-color: white;
	border-radius: 50%;
	-webkit-animation: loader 1.5s linear infinite;
	animation: loader 1.5s linear infinite;
	-moz-animation: loader 2s linear infinite;
	-o-animation: loader 2s linear infinite;
}

@-webkit-keyframes loaders {
	0% {
		-webkit-transform: rotate(0deg);
		-ms-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
		-ms-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}

@keyframes loader {
	0% {
		-webkit-transform: rotate(0deg);
		-ms-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
		-ms-transform: rotate(360deg);
		transform: rotate(360deg);
	}
}

#content-wrapper {
	color: #FFF;
	position: fixed;
	left: 0;
	top: 20px;
	width: 100%;
	height: 100%;
}

#header
{
	width: 800px;
	margin: 0 auto;
	text-align: center;
	height: 100px;
	background-color: #666;
}

#content
{
	width: 800px;
	height: 1000px;
	margin: 0 auto;
	text-align: center;
	background-color: #888;
}
/*-------------------------- CSS FOR LOADING ICON END ---------------*/
#map {
	height: 100%;
}
.controls {
	margin-top: 10px;
	border: 1px solid transparent;
	border-radius: 2px 0 0 2px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	height: 32px;
	outline: none;
	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

.position {
	z-index: 1;
	position: absolute;
	top: 0;
	left: 116px;
}

.pac-input {
	background-color: #fff;
	font-family: Roboto;
	font-size: 15px;
	font-weight: 300;
	margin-left: 12px;
	padding: 0 11px 0 13px;
	text-overflow: ellipsis;
	width: 20%;
}

.pac-input:focus {
	border-color: #4d90fe;
}

.pac-container {
	font-family: Roboto;
}

#type-selector {
	color: #fff;
	background-color: #4d90fe;
	padding: 5px 11px 0px 11px;
}

#type-selector label {
	font-family: Roboto;
	font-size: 13px;
	font-weight: 300;
}
#target {
	width: 345px;
}

.height100 {
	height: 100%;
}



/*------------------------ Hamburcer START ------------------------------ */

#nav-icon3 {
	width: 60px;
	height: 45px;
	position: absolute;
	right: 0;
	top: 0;
	margin-right: 10px;
	margin-top: 10px;
	z-index: 1;
	-webkit-transform: rotate(0deg);
	-moz-transform: rotate(0deg);
	-o-transform: rotate(0deg);
	transform: rotate(0deg);
	-webkit-transition: .5s ease-in-out;
	-moz-transition: .5s ease-in-out;
	-o-transition: .5s ease-in-out;
	transition: .5s ease-in-out;
	cursor: pointer;
    z-index: 3;
}

#nav-icon3 span {
	display: block;
	position: absolute;
	height: 8px;
	width: 90%;
	background: #2c2d31;
	border-radius: 3px;
	opacity: 1;
	left: 0;
	-webkit-transform: rotate(0deg);
	-moz-transform: rotate(0deg);
	-o-transform: rotate(0deg);
	transform: rotate(0deg);
	-webkit-transition: .25s ease-in-out;
	-moz-transition: .25s ease-in-out;
	-o-transition: .25s ease-in-out;
	transition: .25s ease-in-out;
}

#nav-icon3 span:nth-child(1) {
	top: 0px;
}

#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
	top: 18px;
}

#nav-icon3 span:nth-child(4) {
	top: 36px;
}

#nav-icon3.open span:nth-child(1) {
	top: 18px;
	width: 0%;
	left: 50%;
}

#nav-icon3.open span:nth-child(2) {
	-webkit-transform: rotate(45deg);
	-moz-transform: rotate(45deg);
	-o-transform: rotate(45deg);
	transform: rotate(45deg);
}

#nav-icon3.open span:nth-child(3) {
	-webkit-transform: rotate(-45deg);
	-moz-transform: rotate(-45deg);
	-o-transform: rotate(-45deg);
	transform: rotate(-45deg);
}

#nav-icon3.open span:nth-child(4) {
	top: 18px;
	width: 0%;
	left: 50%;
}

/*------------------------ Hamburger END ------------------------------ */

/*-------------------------- CSS FOR ADD LOCATION BEGIN ------------------------*/
#add-location-map:after {
	width: 22px;
	height: 40px;
	display: block;
	content: ' ';
	position: absolute;
	top: 50%; left: 50%;
	margin: -40px 0 0 -11px;
	background: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi_hdpi.png');
	background-size: 22px 40px; /* Since I used the HiDPI marker version this compensates for the 2x size */
	pointer-events: none; /* This disables clicks on the marker. Not fully supported by all major browsers, though */
}
/*------------------------- CSS FOR ADD LOCATION END ----------------------------*/
/*------------------------- CSS FOR MENU BEGIN ---------------------------*/

div.menu ul li {
    z-index: 2;
    font:12px "Open Sans", sans-serif;
    list-style: none;
    position:absolute;
    top:50px;;
    left:0;
    opacity:0;
    width:320px;
    text-align:center;
    font-size:0px;
    -webkit-transition: all 70ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -moz-transition: all 70ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -ms-transition: all 70ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -o-transition: all 70ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    transition: all 70ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
}
div.menu ul li a {
    color:#4a89dc;
    text-transform:uppercase;
    text-decoration:none;
    letter-spacing:3px;
}

div.menu li.animate{
    font-size:21px;
    opacity:1;
    -webkit-transition: all 150ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -moz-transition: all 150ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -ms-transition: all 150ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -o-transition: all 150ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    transition: all 150ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
}
div.menu li.animate:nth-of-type(1){
    top:120px;
    transition-delay: 0.0s;
}
div.menu li.animate:nth-of-type(2){
    top:190px;
    transition-delay: 0.03s;

}
div.menu li.animate:nth-of-type(3){
    top:260px;
    transition-delay: 0.06s;

}
div.menu li.animate:nth-of-type(4){
    top:330px;
    transition-delay: 0.09s;

}
div.menu li.animate:nth-of-type(5){
    top:400px;
    transition-delay: 0.12s;

}
div.menu li.animate:nth-of-type(6){
    top:470px;
    transition-delay: 0.15s;
}
div.circle{
    border-radius: 50%;
    width: 0px;
    height: 0px;
    position:absolute;
    top: 35px;
    left: 36px;
    background:#fff;
    opacity:1;
    -webkit-transition: all 300ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -moz-transition: all 300ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -ms-transition: all 300ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -o-transition: all 300ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    transition: all 300ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    z-index: 2;
}
div.circle.expand{
    width:1200px;
    height:1200px;
    top: -560px;
    left: -565px;
    -webkit-transition: all 400ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -moz-transition: all 400ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -ms-transition: all 400ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    -o-transition: all 400ms cubic-bezier(0.000, 0.995, 0.990, 1.000);
    transition: all 400ms cubic-bezier(0.000, 0.995, 0.990, 1.000);

}
/*--------------------------------- CSS FOR MENU END -------------------*/

